[gd_scene load_steps=16 format=2]

[ext_resource path="res://Assets/Sprites/SpaceBackGround.jpg" type="Texture" id=1]
[ext_resource path="res://HUD/HUD.gd" type="Script" id=2]
[ext_resource path="res://Constant/LaserSound.gd" type="Script" id=3]
[ext_resource path="res://Assets/Sound/laser4.wav" type="AudioStream" id=4]
[ext_resource path="res://Assets/Sound/_release/level1.ogg" type="AudioStream" id=5]
[ext_resource path="res://Assets/Sprites/SpaceShipsPack-AntuZ/SpaceShips/G-09.png" type="Texture" id=6]
[ext_resource path="res://Level 1/Enemy.tscn" type="PackedScene" id=7]
[ext_resource path="res://Constant/PlayerShip.tscn" type="PackedScene" id=8]
[ext_resource path="res://Assets/Fonts/Font1.tres" type="DynamicFont" id=9]
[ext_resource path="res://Level 1/Respawn.gd" type="Script" id=10]
[ext_resource path="res://Assets/Fonts/Rajdhani-SemiBold.ttf" type="DynamicFontData" id=11]
[ext_resource path="res://Constant/PlayerShipNode.gd" type="Script" id=12]
[ext_resource path="res://Level 1/PlayerShip.gd" type="Script" id=13]
[ext_resource path="res://Level 1/Enemies.gd" type="Script" id=14]

[sub_resource type="DynamicFont" id=1]
size = 20
font_data = ExtResource( 11 )

[node name="Level1" type="Node2D"]
script = ExtResource( 12 )

[node name="Background" type="Sprite" parent="."]
show_behind_parent = true
texture = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Level 1" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
autoplay = true

[node name="Enemy Lasers" type="Node2D" parent="."]
scale = Vector2( 0.5, 0.5 )

[node name="Enemies" type="Node2D" parent="."]
scale = Vector2( 0.5, 0.5 )
script = ExtResource( 14 )

[node name="Enemy" parent="Enemies" instance=ExtResource( 7 )]
position = Vector2( 1000, 100 )

[node name="Enemy2" parent="Enemies" instance=ExtResource( 7 )]
position = Vector2( 1100, 200 )

[node name="Enemy3" parent="Enemies" instance=ExtResource( 7 )]
position = Vector2( 900, 200 )

[node name="Enemy4" parent="Enemies" instance=ExtResource( 7 )]
position = Vector2( 1200, 100 )

[node name="Enemy5" parent="Enemies" instance=ExtResource( 7 )]
position = Vector2( 800, 100 )

[node name="Enemy6" parent="Enemies" instance=ExtResource( 7 )]
position = Vector2( 1400, 100 )

[node name="Enemy7" parent="Enemies" instance=ExtResource( 7 )]
position = Vector2( 600, 100 )

[node name="Lasers" type="Node2D" parent="."]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="Lasers"]
stream = ExtResource( 4 )
script = ExtResource( 3 )

[node name="PlayerShip" type="Node2D" parent="."]
script = ExtResource( 13 )

[node name="PlayerShip1" parent="PlayerShip" instance=ExtResource( 8 )]

[node name="Explosions" type="Node2D" parent="."]

[node name="HUD" type="Control" parent="."]
margin_right = 1024.0
margin_bottom = 40.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="HUD"]
margin_right = 1024.0
margin_bottom = 40.0
color = Color( 1, 1, 1, 0 )

[node name="Lives" type="Label" parent="HUD"]
margin_left = 5.0
margin_right = 205.0
margin_bottom = 60.0
custom_fonts/font = SubResource( 1 )
text = "Lives:"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score" type="Label" parent="HUD"]
margin_left = 824.0
margin_right = 1024.0
margin_bottom = 60.0
custom_fonts/font = ExtResource( 9 )
text = "Score:"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Life1" type="TextureRect" parent="HUD"]
margin_left = 109.0
margin_top = 40.0
margin_right = 193.0
margin_bottom = 151.0
rect_rotation = 180.0
rect_scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 6 )

[node name="Life2" type="TextureRect" parent="HUD"]
margin_left = 144.0
margin_top = 40.0
margin_right = 228.0
margin_bottom = 151.0
rect_rotation = 180.0
rect_scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Life3" type="TextureRect" parent="HUD"]
margin_left = 179.0
margin_top = 40.0
margin_right = 263.0
margin_bottom = 151.0
rect_rotation = 180.0
rect_scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 6 )

[node name="Respawn" type="Timer" parent="."]
wait_time = 4.0
one_shot = true
script = ExtResource( 10 )
[connection signal="timeout" from="Respawn" to="PlayerShip" method="_on_Respawn_timeout"]
