[gd_scene load_steps=13 format=2]

[ext_resource path="res://Assets/Sound/_release/level2.ogg" type="AudioStream" id=1]
[ext_resource path="res://Assets/Sprites/SpaceBackGround.jpg" type="Texture" id=2]
[ext_resource path="res://Constant/PlayerShip.gd" type="Script" id=3]
[ext_resource path="res://Constant/LaserSound.gd" type="Script" id=4]
[ext_resource path="res://Assets/Fonts/Font1.tres" type="DynamicFont" id=5]
[ext_resource path="res://Assets/Sprites/SpaceShipsPack-AntuZ/SpaceShips/G-09.png" type="Texture" id=6]
[ext_resource path="res://Assets/Sound/laser4.wav" type="AudioStream" id=7]
[ext_resource path="res://Level 2/Enemy2.tscn" type="PackedScene" id=8]
[ext_resource path="res://Level 1/Enemy.tscn" type="PackedScene" id=9]
[ext_resource path="res://HUD/HUD.gd" type="Script" id=10]
[ext_resource path="res://Level 1/Respawn.gd" type="Script" id=11]

[sub_resource type="LargeTexture" id=1]

[node name="Level2" type="Node2D"]

[node name="Level 2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 1 )
autoplay = true

[node name="Background" type="Sprite" parent="."]
show_behind_parent = true
texture = ExtResource( 2 )
normal_map = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Enemies2" type="Node2D" parent="."]
position = Vector2( 500, 100 )
scale = Vector2( 0.5, 0.5 )

[node name="Enemy" parent="Enemies2" instance=ExtResource( 8 )]

[node name="Enemy2" parent="Enemies2" instance=ExtResource( 8 )]

[node name="Enemy3" parent="Enemies2" instance=ExtResource( 8 )]

[node name="Enemy4" parent="Enemies2" instance=ExtResource( 8 )]

[node name="Enemy5" parent="Enemies2" instance=ExtResource( 9 )]

[node name="Enemy6" parent="Enemies2" instance=ExtResource( 9 )]

[node name="Enemy7" parent="Enemies2" instance=ExtResource( 9 )]

[node name="Enemy8" parent="Enemies2" instance=ExtResource( 9 )]

[node name="Enemy9" parent="Enemies2" instance=ExtResource( 9 )]

[node name="Enemy Lasers" type="Node2D" parent="."]
position = Vector2( 500, 100 )
scale = Vector2( 0.5, 0.5 )

[node name="Respawn" type="Timer" parent="Enemy Lasers"]
wait_time = 4.0
one_shot = true
script = ExtResource( 11 )

[node name="Lasers" type="Node2D" parent="."]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="Lasers"]
stream = ExtResource( 7 )
script = ExtResource( 4 )

[node name="Explosions" type="Node2D" parent="."]

[node name="HUD" type="Control" parent="."]
margin_right = 1024.0
margin_bottom = 40.0
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="HUD"]
margin_right = 1024.0
margin_bottom = 40.0
color = Color( 1, 1, 1, 0 )

[node name="Lives" type="Label" parent="HUD"]
margin_left = 5.0
margin_right = 305.0
margin_bottom = 40.0
custom_fonts/font = ExtResource( 5 )
text = "Lives:"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score" type="Label" parent="HUD"]
margin_left = 824.0
margin_right = 1024.0
margin_bottom = 40.0
custom_fonts/font = ExtResource( 5 )
text = "Score:"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Life1" type="TextureRect" parent="HUD"]
margin_left = 109.0
margin_top = 36.0
margin_right = 193.0
margin_bottom = 147.0
rect_rotation = 180.0
rect_scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Life2" type="TextureRect" parent="HUD"]
margin_left = 144.0
margin_top = 36.0
margin_right = 228.0
margin_bottom = 147.0
rect_rotation = 180.0
rect_scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Life3" type="TextureRect" parent="HUD"]
margin_left = 179.0
margin_top = 36.0
margin_right = 263.0
margin_bottom = 147.0
rect_rotation = 180.0
rect_scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Ship Container" type="Node2D" parent="."]
position = Vector2( 500, 550 )

[node name="Ship" type="KinematicBody2D" parent="Ship Container"]
scale = Vector2( 0.5, 0.5 )
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Ship Container/Ship"]
position = Vector2( -1, -2 )
rotation = 3.14159
scale = Vector2( 0.75, 0.75 )
polygon = PoolVector2Array( 42, -4.5, 30.9, 7.5, 28, 7.5, 28, 13.3, 24.8, 16.5, 21.4, 16.5, 17.9, 14.3, 16, 15.6, 16, 30.8, 9.5, 53.5, 8, 53.5, 6.5, 55.5, -6, 55.5, -14, 43.1, -14, 37.5, -15.9, 16.3, -19.2, 14.3, -26, 17.7, -26, 13.9, -27.6, 6.6, -32, 8.7, -32, 5.4, -42, -3.8, -42, -55.5, -41, -55.5, -33.3, -46.8, -26.7, -52.5, -22.8, -52.5, -12.5, -50.8, -10, -54.2, -10, -55.5, 10, -55.5, 10, -54, 12.1, -50.5, 12.7, -50.5, 28, -52.8, 28, -50.4, 33.7, -45.5, 41, -55.5, 42, -55.5 )

[node name="Player Ship" type="Sprite" parent="Ship Container/Ship"]
position = Vector2( -1, -2 )
rotation = 3.14159
scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 6 )
[connection signal="timeout" from="Enemy Lasers/Respawn" to="Enemy Lasers/Respawn" method="_on_Respawn_timeout"]
